--- a/karen.tex
+++ b/karen.tex
@@ -20,6 +20,7 @@
 % Added packages
 \usepackage[usenames]{color}
 \usepackage{subfigure}
+\usepackage{amsfonts, amsmath, amssymb, graphics}
 
 \title{PDE Solutions with RBF-FD and Multiple GPUs}
 \author{Evan F. Bollig}
@@ -43,6 +44,7 @@
 \usepackage[chapter]{algorithm}
 
 \input{macros/macros.tex}
+\input{macros/authnote_macros.tex}
 \input{macros/misc_mac.tex}
 \input{macros/aliases.tex}
 
@@ -69,7 +71,9 @@
 \mainmatter
 
 \input{chapter1.tex}
-
+\input{chapter2.tex}
+\input{chapter3.tex} 
+\input{chapter4.tex} 
 
 %\chapter{Review}
 %\begin{itemize} 
