Integrating content from prospectus and working sort of backwards on the document (starting with "publications, talks, etc")

--- a/karen.tex
+++ b/karen.tex
@@ -50,30 +50,39 @@
 
 \begin{document}
 
-%% UNCOMMENT THIS FOR ETD CLEARANCE
-%\frontmatter
-%\maketitle
-%\makecommitteepage
-%
-%\input{dedication.tex}
-%\input{acknowledgments.tex}
-%
-%\tableofcontents
-%\listoftables
-%\listoffigures
-%\listofalgorithms
-%
-%\input{symbols.tex}
-%\input{abbreviations.tex}
-%
-%\input{abstract.tex}
+	%% UNCOMMENT THIS FOR ETD CLEARANCE
+	%\frontmatter
+	%\maketitle
+	%\makecommitteepage
+	%
+	%\input{dedication.tex}
+	%\input{acknowledgments.tex}
+	%
+	%\tableofcontents
+	%\listoftables
+	%\listoffigures
+	%\listofalgorithms
+	%
+	%\input{symbols.tex}
+	%\input{abbreviations.tex}
+	%
+	%\input{abstract.tex}
 
 \mainmatter
+
+Need history of RBF-FD. 
+Parallel computing possible in distributed fashion. Reference Saad 2003. This involves domain decomposition, idex mapping between local and global indices, and local node ordering. 
+Need explanation of GPU computing. 
+The RBF community has traditionally focused on global schemes. 
+
 
 \input{chapter1.tex}
 \input{chapter2.tex}
 \input{chapter3.tex} 
 \input{chapter4.tex} 
+
+need chapter stating publications and talks, internships, developer status
+need Survey of goals stated in prospectus and whether they were completed or not (Probably part of slides, not actual dissertation)
 
 %\chapter{Review}
 %\begin{itemize} 
