Trying multiple bib files.

--- a/karen.tex
+++ b/karen.tex
@@ -21,6 +21,8 @@
 \usepackage[usenames]{color}
 \usepackage{subfigure}
 \usepackage{amsfonts, amsmath, amssymb, graphics}
+\usepackage{bibentry}
+\nobibliography*
 
 \title{PDE Solutions with RBF-FD and Multiple GPUs}
 \author{Evan F. Bollig}
@@ -83,6 +85,8 @@ The RBF community has traditionally focused on global schemes.
 
 need chapter stating publications and talks, internships, developer status
 need Survey of goals stated in prospectus and whether they were completed or not (Probably part of slides, not actual dissertation)
+
+\input{publications.tex}
 
 %\chapter{Review}
 %\begin{itemize} 
