--- a/chapter1.tex
+++ b/chapter1.tex
@@ -5,13 +5,12 @@
 \section{Introduction}
 \label{sec:intro}
 
-Numerical methods based on radial basis functions (RBFs) are rapidly gaining popularity for the solution of partial differential equations (PDEs). With a history extending back four decades for RBF interpolation schemes \cite{Hardy1971}, and two decades for RBFs applied to solving PDEs \cite{Kansa1990a}, many avenues of research remain untouched within their realm. Being a meshless method, RBF \ge{s}{methods}{2.3} excel at solving problems that require geometric flexibility with scattered node layouts in $n$-dimensional space. \ge{As a result, they}{They}{1.2} naturally extend into higher dimensions without significant increase in programming complexity \cite{FlyerWright07,WrightFlyerYuen10}. In addition to competitive accuracy and convergence \ge{}{compared}{2.4} with other state-of-the-art methods \cite{FlyerWright07, FlyerWright09, FlyerLehto10, WrightFlyerYuen10, FlyerFornberg11}, they also boast stability for large time steps.
+Numerical methods based on radial basis functions (RBFs) are rapidly gaining popularity for the solution of partial differential equations (PDEs). With a history extending back four decades for RBF interpolation schemes \cite{Hardy1971}, and two decades for RBFs applied to solving PDEs \cite{Kansa1990a}, many avenues of research remain untouched within their realm. Being a meshless method, RBF methods excel at solving problems that require geometric flexibility with scattered node layouts in $n$-dimensional space. They naturally extend into higher dimensions without significant increase in programming complexity \cite{FlyerWright07,WrightFlyerYuen10}. In addition to competitive accuracy and convergence compared with other state-of-the-art methods \cite{FlyerWright07, FlyerWright09, FlyerLehto10, WrightFlyerYuen10, FlyerFornberg11}, they also boast stability for large time steps.
 
 Examples of infinitely smooth RBFs in 2D space are shown in Figure \ref{fig:rbfs} (good references on non-smooth and compactly supported RBFs, which are not considered in this paper due to lower order of convergence, are \cite{BuhmannBook,WendlandBook}). RBF methods are based on a superposition of translates of these radially symmetric functions, providing a linearly independent but non-orthogonal basis used to interpolate between nodes in $n$-dimensional space. An example of RBF interpolation in 2D using 15 Gaussians is shown in Figure~\ref{fig:rbfInterpolation}, where 
-\ge{$\phi_j(r(\vx) = \sqrt{(x-x_j)^2 + (y-y_j)^2})$}
-   {$\phi_j(r(\vx))$}{2.5}
+   $\phi_j(r(\vx))$
 is an RBF centered at $\{\vx_j\}_{j=1}^{n}$. 
-   \ge{}{The radial coordinate is $r = \sqrt{(x-x_j)^2 + (y-y_j)^2}$.}{2.5}
+   The radial coordinate is $r = \sqrt{(x-x_j)^2 + (y-y_j)^2}$.
 
 \begin{figure}[ht]
     \centering
@@ -22,10 +21,10 @@ is an RBF centered at $\{\vx_j\}_{j=1}^{n}$.
     \label{fig:rbfs}
 \end{figure}
 
-Infinitely smooth RBFs depend on a shape or support parameter $\epsilon$ that controls the width of the function. The functional form of the shape function becomes $\phi(\epsilon r)$. Decreasing $\epsilon$ increases the support of the RBF and \ge{}{in most cases,}{2.6} the accuracy of the interpolation, but worsens the conditioning of the RBF interpolation problem \cite{Schaback1995}. Fortunately, recent algorithms such as Contour-Pad\'{e} \cite{Fornberg2004} and RBF-QR \cite{Fornberg2007, Fornberg2011a} allow for numerically stable computation of interpolants in the nearly flat RBF regime (i.e., $\epsilon \rightarrow 0$) where high accuracy has been observed \cite{Larsson2003, Fornberg2008}.
+Infinitely smooth RBFs depend on a shape or support parameter $\epsilon$ that controls the width of the function. The functional form of the shape function becomes $\phi(\epsilon r)$. Decreasing $\epsilon$ increases the support of the RBF and in most cases, the accuracy of the interpolation, but worsens the conditioning of the RBF interpolation problem \cite{Schaback1995}. Fortunately, recent algorithms such as Contour-Pad\'{e} \cite{Fornberg2004} and RBF-QR \cite{Fornberg2007, Fornberg2011a} allow for numerically stable computation of interpolants in the nearly flat RBF regime (i.e., $\epsilon \rightarrow 0$) where high accuracy has been observed \cite{Larsson2003, Fornberg2008}.
 
 Historically, the most common way to implement RBFs is in a global sense. That is, the value of a function value or any of its derivatives 
-at a node location is a linear combination of all the function values over the \textit{entire} domain, just as in a pseudospectral method. If using infinitely smooth RBFs, this leads to exponential convergence of the RBF interpolant for smooth data \eb{}{\cite{Fornberg2005}}{1.3}. %\ge{}{(need reference}{1.3} 
+at a node location is a linear combination of all the function values over the \textit{entire} domain, just as in a pseudospectral method. If using infinitely smooth RBFs, this leads to exponential convergence of the RBF interpolant for smooth data \cite{Fornberg2005}. %(need reference 
 %\st{As discussed in {\cite{FlyerWright09}}, global RBF methods  require a 
 %preprocessing stage, executed once, to assemble and solve for the 
 %differentiation matrices. This step costs $O(N^3)$ floating point operations,
@@ -34,11 +33,10 @@ at a node location is a linear combination of all the function values over the \
 %function values evaluated at the RBF node centers to obtain an 
 %approximation to function derivatives at the RBF node centers. The cost 
 %of a derivative calculation is $O(N^2)$. }
-\eb{However, this comes at a heavy price in that the matrices are completely full. With $N$ being the total number of nodes, these dense systems scale as $O(N^3)$ operations for calculating the differentiation matrices (DM), a pre-processing step, followed by $O(N^2)$ operations every time-step.}{
-As discussed in \cite{FlyerWright09}, global RBF differentiation matrices (DM) are full, requiring $O(N^3)$ floating point operations (FLOPs) to assemble for a given node layout and $O(N^2)$ to time-step.}{}
+As discussed in \cite{FlyerWright09}, global RBF differentiation matrices (DM) are full, requiring $O(N^3)$ floating point operations (FLOPs) to assemble for a given node layout and $O(N^2)$ to time-step.
 
 %$O(N^3)$ floating point operations in pre-processing, where $N$ is the total number of nodes, to assemble and solve a dense linear system that collocates function values at nodes and results in differentiation coefficients. The differentiation coefficients in turn form a dense Differentiation Matrix (DM) that is applied via matrix-vector multiply at every time-step to compute derivatives at a cost of $O(N^2)$ operations. }{1.4}
-%%\ge{}{(what matrices?)}{1.4}. 
+%%(what matrices?). 
 
 Alternatively, one can use RBF-generated finite differences (RBF-FD) to introduce sparse DMs (Note: for pure interpolation, compactly supported RBFs can also introduce sparse matrices \cite{Wendland1995}).
 RBF-FD was first introduced by Tolstykh in 2000 \cite{Tolstykh2000}, 
@@ -47,13 +45,13 @@ efforts in \cite{Shu2003}, \cite{Tolstykh2003a}, \cite{Wright2003} and \cite{Cec
 The RBF-FD method is similar in concept to classical 
 finite-differences (FD) but differs in that the underlying differentiation 
 weights are exact for RBFs rather than polynomials. RBF-FD 
-%\ge{}{(yes, spectral and exponential are the same)}{1.5}
+%(yes, spectral and exponential are the same)
 share advantages with global RBF methods, 
 like the ability to function without an underlying mesh, easily extend to higher dimensions and afford large time steps; however spectral accuracy is lost. 
-\ge{Much more advantageous though, is that vast computational speed with still high-order accuracy }{Some of the advantages of RBF-FD 
-include high computational speed together with high-order accuracy}{1.6}
+Some of the advantages of RBF-FD 
+include high computational speed together with high-order accuracy
 (6th to 10th order accuracy is common) and the opportunity 
-\ge{to parallelize. }{for parallelization.}{1.6}
+for parallelization.
 As in FD, increasing the stencil size $n$  increases the accuracy of the approximation.
 Given $N$ total nodes in the domain (such as on the surface of a sphere), $N$ linear systems, each of size $n \times n$, are solved to calculate the differentiation weights. Since $n \ll N$, the RBF-FD preprocessing complexity is dominated by $O(N)$, much lower than for the global RBF method of $O(N^3)$, with the cost per time step also being $O(N)$. RBF-FD have been successfully employed for a variety of problems including Hamilton-Jacobi equations \cite{Cecil2004}, convection-diffusion problems \cite{Chandhini2007, Stevens2009b},
 incompressible Navier-Stokes equations \cite{Shu2003,Chinchapatnam2009}, transport on the sphere \cite{FornbergLehto11}, and the shallow water equations \cite{FlyerLehto11}.
